<resources>
	<string name="app_name">My App Portfolio</string>

	<string name="hello_world">Hello world!</string>
	<string name="action_settings">Settings</string>

	<string name="main_title">My Nanodegree Apps</string>
	<string name="main_btn_spotify_text">SPOTIFY STREAMER</string>
	<string name="main_btn_scores_text">SCORES APP</string>
	<string name="main_btn_library_text">LIBRARY APP</string>
	<string name="main_btn_bigger_text">BUILD IT BIGGER</string>
	<string name="main_btn_reader_text">XYZ READER</string>
	<string name="main_btn_capstone_text">CAPSTONE</string>
</resources>
